--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
+    "remark-prism": "^1.3.6",
     "typescript": "5.0.3"
   },
   "packageManager": "yarn@3.5.0",
