--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "packageManager": "yarn@3.5.0",
   "devDependencies": {
-    "sass": "^1.60.0"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "sass": "^1.60.0",
+    "tailwindcss": "^3.3.1"
   }
 }
