--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "packageManager": "yarn@3.5.0",
   "devDependencies": {
+    "@types/remark-prism": "^1.3.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "sass": "^1.60.0",
